--- a/game.css
+++ b/game.css
@@ -4,7 +4,7 @@
     width: 100%;
     font-size: 1.8rem;
     border: 0.1rem solid rgb(86, 165, 235, 0.25);
-    background-color: white;
+    background-color: rgb(163, 108, 147);
   }
   
   .choice-container:hover {
@@ -16,7 +16,7 @@
   
   .choice-prefix {
     padding: 1.5rem 2.5rem;
-    background-color: #56a5eb;
+    background-color: #c4d8e9;
     color: white;
   }
   
@@ -26,11 +26,11 @@
   }
   
   .correct {
-    background-color: #28a745;
+    background-color: #a8cab0;
   }
   
   .incorrect {
-    background-color: #dc3545;
+    background-color: #be7d84;
   }
   
   /* HUD */
